<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".perfil_usuario">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/imagen_usuario"
                android:layout_width="230dp"
                android:layout_height="136dp"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/account_avatar_face_man_people_profile_user_icon_123197" />
            <!--            <ImageView-->
            <!--                android:id="@+id/imagen_usuario"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="122dp"-->
            <!--                android:visibility="visible"-->
            <!--                tools:src="@drawable/account_avatar_face_man_people_profile_user_icon_123197" />-->

            <TextView
                android:id="@+id/nombre_perfil_usuario"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_marginTop="30dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Button
                android:id="@+id/mi_cuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/botones_primary"
                android:text="@string/micuenta" />

            <Button
                android:id="@+id/pedidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/botones_primary"
                android:text="@string/pedidos" />

            <Button
                android:id="@+id/cambio_contraseña_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/buttom_secundary"
                android:text="@string/Cambiarcontra"
                android:textSize="16sp" />

            <Button
                android:id="@+id/cambio_correo_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/buttom_secundary"
                android:text="@string/cambiarcorreo"
                android:textSize="16sp" />

            <Button
                android:id="@+id/cerrar_sesion_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/buttom_secundary"
                android:text="@string/cerrar_sesion"
                android:textSize="16sp" />

            <Button
                android:id="@+id/eliminar_cuenta_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/buttom_secundary"
                android:text="@string/eliminarcuenta"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>