<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedidos"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/pedido_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="202dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="#FF0000"
                android:text="@string/nombre"
                android:textAlignment="textStart"
                android:textColor="#FF0000" />

            <TextView
                android:id="@+id/Nombre_admin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="#FF0000"
                android:text="@string/gmail"
                android:textAlignment="textStart"
                android:textColor="#FF0000" />

            <TextView
                android:id="@+id/Correo_admin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="#FF0000"
                android:text="@string/telefono"
                android:textAlignment="textStart"
                android:textColor="#FF0000" />

            <TextView
                android:id="@+id/Telefono_admin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="#FF0000"
                android:text="Total pagado"
                android:textAlignment="textStart"
                android:textColor="#FF0000" />

            <TextView
                android:id="@+id/pago_admin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textAlignment="textStart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listape2"
                android:textAlignment="center"
                android:textColor="#FF0000" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listado_hiden"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbarSize="10dp"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shadowColor="#FF0000"
        android:text="@string/Dirreccion"
        android:textAlignment="center"
        android:textColor="#FF0000" />

    <TextView
        android:id="@+id/dirrecion_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="241dp"
        android:layout_height="32dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/seguimiento_admin"
            android:layout_width="163dp"
            android:layout_height="match_parent"
            android:text="TextView"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/cambiar_segumiento"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/add_plus_svgrepo_com" />

    </LinearLayout>

</LinearLayout>