<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inicio_usuario">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="match_parent"
                android:layout_height="290dp"
                android:src="@drawable/bella" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <VideoView
                    android:id="@+id/videoView2"
                    android:layout_width="match_parent"
                    android:layout_height="296dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="306dp"
                    android:layout_height="128dp"
                    android:background="#3E000000"
                    android:text="@string/inicioanuncio"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.416" />

                <TextView
                    android:id="@+id/comprar"
                    android:layout_width="112dp"
                    android:layout_height="29dp"
                    android:text="@string/comprarya"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.946"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.94" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="295dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="326dp"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="match_parent"
                        android:layout_height="278dp"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:src="@drawable/_91776600_1555253408210014_9158736175002424325_n"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView30"
                        android:layout_width="318dp"
                        android:layout_height="44dp"
                        android:layout_weight="1"
                        android:background="#000000"
                        android:text="@string/productostuestilo"
                        android:textColor="#FFFFFF"
                        android:textSize="34sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.099" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="326dp"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="match_parent"
                        android:layout_height="278dp"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:src="@drawable/_64215199_1034148323780721_882907374757178311_n"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView31"
                        android:layout_width="385dp"
                        android:layout_height="44dp"
                        android:layout_weight="1"
                        android:background="#000000"
                        android:text="@string/entrega"
                        android:textAlignment="textEnd"
                        android:textColor="#FFFFFF"
                        android:textSize="34sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView35"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFD100"
                    android:text="@string/metodopago"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageView9"
                            android:layout_width="125dp"
                            android:layout_height="136dp"
                            android:src="@drawable/credit_card_paypal_payment_method_icon_134923" />

                        <TextView
                            android:id="@+id/textView36"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="20dp"
                            android:text="@string/paypal"
                            android:textColor="#000000"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView37"
                            android:layout_width="283dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/envios"
                            android:textColor="#000000"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/imageView11"
                            android:layout_width="125dp"
                            android:layout_height="103dp"
                            android:src="@drawable/truck_moving_vehicle_transport_transportation_shipping_icon_142014" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageView12"
                            android:layout_width="125dp"
                            android:layout_height="101dp"
                            android:src="@drawable/padlock_104912" />

                        <TextView
                            android:id="@+id/textView38"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="15dp"
                            android:text="@string/seguridad"
                            android:textColor="#000000"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView39"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#A059DA"
                            android:text="@string/redes"
                            android:textColor="#000000"
                            android:textSize="24sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="70dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/instagram"
                                android:layout_width="wrap_content"
                                android:layout_height="82dp"
                                android:layout_weight="1"
                                android:src="@drawable/instagram_color_icon_icons_com_71811" />

                            <ImageView
                                android:id="@+id/whatss"
                                android:layout_width="wrap_content"
                                android:layout_height="84dp"
                                android:layout_weight="1"
                                android:src="@drawable/whatsapp_icon_icons_com_66931" />

                            <ImageView
                                android:id="@+id/Correo"
                                android:layout_width="wrap_content"
                                android:layout_height="83dp"
                                android:layout_weight="1"
                                android:src="@drawable/gmail_icon_icons_com_66934" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>